# smart-home-devices

./: .gitignore  ProjectHome.md  README.md  tiny85
ethernut-4.10.2/: COPYING  ChangeLog  ChangeLog20090309  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  reconf
ethernut-4.10.2/nut/: Makedefs.arm-ecross-gcc  Makedefs.arm-ecross-gccdbg  Makedefs.arm-gcc  Makedefs.arm-gccdbg  Makedefs.avr-gcc  Makedefs.avr-gccdbg  Makedefs.avr32-gcc  Makedefs.avr32-gccdbg  Makedefs.h8-gcc  Makedefs.unix-gcc  Makerules.all  Makerules.arm-ecross-gcc  Makerules.arm-ecross-gccdbg  Makerules.arm-gcc  Makerules.arm-gccdbg  Makerules.avr-gcc  Makerules.avr-gccdbg  Makerules.avr32-gccdbg  Makerules.gcc  Makerules.h8-gcc  Makerules.unix-gcc  Makevars.all  Makevars.arm-ecross-gcc  Makevars.arm-gcc  Makevars.avr-gcc  Makevars.avr32-gcc  Makevars.gcc  nutsetup
ethernut-4.10.2/nut/app/: Makeburn.arm-jom  Makeburn.arm-oocd  Makeburn.arm-samba  Makeburn.arm-turtle  Makeburn.avr-dude  Makeburn.avr-jtagice  Makeburn.avr-jtagicemkii  Makeburn.avr-uisp-stk500  Makeburn.avr32-jtagicemkii  Makeburn.gba-xport2  Makedefs.arm-ecross-gcc  Makedefs.arm-ecross-gccdbg  Makedefs.arm-gcc  Makedefs.arm-gccdbg  Makedefs.avr-gcc  Makedefs.avr-gccdbg  Makedefs.avr-icc  Makedefs.avr-icc7  Makedefs.avr32-gcc  Makedefs.avr32-gccdbg  Makedefs.avrext-icc  Makedefs.avrext-icc7  Makedefs.h8-gcc  Makedefs.icc  Makedefs.npl-xc95  Makedefs.unix-gcc  Makefile  Makerules.all  Makerules.arm-ecross-gcc  Makerules.arm-ecross-gccdbg  Makerules.arm-gcc  Makerules.arm-gccdbg  Makerules.avr-gcc  Makerules.avr-gccdbg  Makerules.avr-icc  Makerules.avr-icc7  Makerules.avr32-gcc  Makerules.avr32-gccdbg  Makerules.avrext-icc  Makerules.avrext-icc7  (+11 more)
ethernut-4.10.2/nut/app/caltime/: Makefile  caltime.c
ethernut-4.10.2/nut/app/cppdemo/: Makefile  cppdemo.cc
ethernut-4.10.2/nut/app/editconf/: Makefile  editconf.c  meminfo.c  meminfo.h
ethernut-4.10.2/nut/app/events/: Makefile  events.c
ethernut-4.10.2/nut/app/ftpd/: Makefile  ftpserv.c
ethernut-4.10.2/nut/app/httpd/: Makefile  httpserv.c
ethernut-4.10.2/nut/app/httpd_simple/: Makefile  httpd_simple.c
ethernut-4.10.2/nut/app/httpd_upnp/: Makefile  httpserv.c  upnp.c  upnp.h
ethernut-4.10.2/nut/app/icmp-udp/: Makefile  icmp-udp.c  udp_echo.java
ethernut-4.10.2/nut/app/inetq/: Makefile  inetq.c
ethernut-4.10.2/nut/app/logtime/: Makefile  logtime.c
ethernut-4.10.2/nut/app/lua/: Makefile  lua.c
ethernut-4.10.2/nut/arch/: Makefile
ethernut-4.10.2/nut/conf/: arthernet1.conf  at91eb40a.conf  at91eb40a_redboot.conf  at91sam7s.conf  at91sam7se-ek.conf  at91sam7x-ek-radio.conf  at91sam7x-ek.conf  at91sam9260-ek.conf  at91sam9g45-ek.conf  charon2.conf  eir10c.conf  enet-sam7x.conf  enet-sam7x_bootrom.conf  ethernut103.conf  ethernut13f.conf  ethernut13g.conf  ethernut13h-256gcc.conf  ethernut13h.conf  ethernut20a.conf  ethernut21b-256.conf  ethernut21b-256gcc.conf  ethernut21b.conf  ethernut30d.conf  ethernut30e.conf  ethernut31d.conf  ethernut50f.conf  evk1100-extram.conf  evk1100-intram.conf  evk1101.conf  evk1104-extram.conf  evk1104-intram.conf  evk1105-extram.conf  evk1105-intram.conf  gbaxport2.conf  mmnet01.conf  mmnet02.conf  mmnet02_03_04.conf  mmnet03.conf  mmnet04.conf  mmnet101.conf  (+12 more)
ethernut-4.10.2/nut/cpp/: Makefile  nutcpp.cc
ethernut-4.10.2/nut/crt/: Makefile  calloc.c  calloc_dbg.c  close.c  clrerr.c  ctime.h  environ.c  errno.c  fclose.c  fcloseall.c  fdopen.c  feof.c  ferror.c  fflush.c  fgetc.c  fgets.c  filelength.c  fileno.c  flushall.c  fmode.c  fopen.c  fprintf.c  fprintf_p.c  fpurge.c  fputc.c  fputs.c  fputs_p.c  fread.c  freopen.c  fscanf.c  fscanf_p.c  fseek.c  ftell.c  fwrite.c  fwrite_p.c  getc.c  getchar.c  getenv.c  getf.c  getff.c  (+48 more)
ethernut-4.10.2/nut/dev/: Makefile  at24c.c  at45db.c  at49bv.c  avrtarget.c  blockdev.c  can_dev.c  chat.c  cy2239x.c  dm9000.c  ds1307rtc.c  eeprom.c  genchar.c  hxcodec.c  ihndlr.c  jtag_gpio0.c  jtag_tap.c  keys.c  lan91.c  led.c  mmcard.c  netbuf.c  npl.c  nplmmc.c  npluled.c  null.c  null_ether.c  nvmem.c  nvmem_at45d.c  pca9555.c  pcf8563.c  ppp.c  reset.c  rtc.c  sbbif0.c  sbi0mmc0.c  sbi0mmc1.c  sbi1mmc0.c  sbi1mmc1.c  sbi_mmc.c  (+34 more)
ethernut-4.10.2/nut/doc/: Makefile.am  Makefile.in  copying-liquorice.txt
ethernut-4.10.2/nut/fs/: Makefile  basename.c  dirent.c  dirname.c  fat.c  pathops.c  phat12.c  phat16.c  phat32.c  phatdbg.c  phatdir.c  phatfs.c  phatio.c  phatutil.c  phatvol.c  pnutfs.c  rawfs.c  uflashfs.c  uromfs.c
ethernut-4.10.2/nut/gorp/: Makefile
ethernut-4.10.2/nut/include/: compiler.h  dirent.h  errno.h  fcntl.h  io.h  libgen.h  memdebug.h  netdb.h  stdio.h  stdio_nut_wrapper.h  strtok_r.h  time.h  unistd.h
ethernut-4.10.2/nut/lib/: Makefile
ethernut-4.10.2/nut/lua/: Makefile  lapi.c  lauxlib.c  lbaselib.c  lcode.c  ldblib.c  ldebug.c  ldo.c  ldump.c  lfunc.c  lgc.c  linit.c  liolib.c  llex.c  lmathlib.c  lmem.c  loadlib.c  lobject.c  lopcodes.c  loslib.c  lparser.c  lrotable.c  lstate.c  lstring.c  lstrlib.c  ltable.c  ltablib.c  ltm.c  lundump.c  lvm.c  lzio.c
ethernut-4.10.2/nut/net/: Makefile  arpcache.c  arpin.c  arpout.c  confnet.c  ethdemux.c  ether_addr.c  ethin.c  ethout.c  icmpin.c  icmpout.c  ifconfig.c  igmp.c  igmpin.c  igmpout.c  inet.c  ipcpin.c  ipcpout.c  ipcsum.c  ipdemux.c  ipin.c  ipout.c  lcpin.c  lcpout.c  netdebug.c  papin.c  papout.c  pppdebug.c  pppin.c  pppout.c  pppsm.c  route.c  tcpin.c  tcpout.c  tcpsm.c  tcpsock.c  tcputil.c  udpin.c  udpout.c  udpsock.c
ethernut-4.10.2/nut/os/: Makefile  bankmem.c  condition.c  confos.c  devreg.c  event.c  fatal.c  heap.c  msg.c  mutex.c  nutinit.c  osdebug.c  panic.c  semaphore.c  thread.c  timer.c  tracer.c  version.c
ethernut-4.10.2/nut/pro/: Makefile  asn1.c  asp.c  auth.c  cgi.c  confdns.c  dencode.c  dencode.h  dhcpc.c  discover.c  ftpd.c  httpd.c  httpd_p.c  httpd_p.h  httpopt.c  resolv.c  rfctime.c  smtpc.c  snmp.c  snmp_agent.c  snmp_api.c  snmp_auth.c  snmp_config.c  snmp_mib.c  snmp_pdu.c  snmp_session.c  sntp.c  ssi.c  syslog.c  syslog_P.c  uxmlparse.c  uxmlstream.c  uxmltree.c  wins.c
(+1585 files in other folders)
